--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
+
 group 'org.clyze'
 
 repositories {
