--- a/build.gradle
+++ b/build.gradle
@@ -32,19 +32,19 @@ dependencies {
     implementation group: 'org.ow2.asm', name: 'asm', version: asmVersion
     implementation group: 'org.ow2.asm', name: 'asm-tree', version: asmVersion
     // Java parser, Apache 2.0
-    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.20.0'
+    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.23.0'
     // Groovy parser, Apache 2.0
     api "org.codehaus.groovy:groovy:3.0.9"
     // Kotlin parser, Apache 2.0
     api "org.antlr.grammars:kotlin-formal:1.0-SNAPSHOT"
     // Dex parser, BSD
-    api 'org.smali:dexlib2:2.4.0'
+    api 'org.smali:dexlib2:2.5.2'
     // Zip library, Apache 2.0
-    implementation 'org.zeroturnaround:zt-zip:1.13'
+    implementation 'org.zeroturnaround:zt-zip:1.14'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testImplementation 'commons-io:commons-io:2.8.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
 }
 
 test {
