--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ group 'org.clyze'
 repositories {
     mavenLocal()
     mavenCentral()
+    maven { url 'https://clyze.jfrog.io/artifactory/default-maven-local' }
     maven { url "http://centauri.di.uoa.gr:8081/artifactory/plast-public" }
 }
 
@@ -23,11 +24,11 @@ mainClassName = 'org.clyze.source.irfitter.Main'
 def asmVersion = '9.2'
 dependencies {
     implementation "commons-cli:commons-cli:1.2"
-    implementation "org.clyze:clue-common:3.25.0"
+    implementation "org.clyze:clue-common:3.25.2"
     implementation "org.clyze:metadata-model:2.2.3"
     implementation "org.clyze:code-processor:4.24.4"
     // SARIF library
-    implementation 'org.clyze:mini-sarif:0.1.2'
+    implementation 'org.clyze:mini-sarif:0.1.3'
     // Bytecode parser, BSD
     implementation group: 'org.ow2.asm', name: 'asm', version: asmVersion
     implementation group: 'org.ow2.asm', name: 'asm-tree', version: asmVersion
