--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,10 @@ wrapper {
 
 def asmVersion = '9.2'
 dependencies {
-    implementation "commons-cli:commons-cli:1.2"
-    implementation "org.clyze:clue-common:3.25.2"
-    implementation "org.clyze:metadata-model:2.4.0"
-    implementation "org.clyze:code-processor:4.24.9"
+    implementation 'commons-cli:commons-cli:1.5.0'
+    implementation "org.clyze:clue-common:3.25.3"
+    implementation "org.clyze:metadata-model:2.4.1"
+    implementation "org.clyze:code-processor:4.24.10"
     // SARIF library
     implementation 'org.clyze:mini-sarif:0.1.3'
     // Bytecode parser, BSD
@@ -51,9 +51,9 @@ dependencies {
     // Zip library, Apache 2.0
     implementation 'org.zeroturnaround:zt-zip:1.14'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation 'commons-io:commons-io:2.11.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 test {
